implements Table class

--- a/index.html
+++ b/index.html
@@ -15,62 +15,7 @@
       name="cityName"
       placeholder="Enter city name"
     />
-    <table style="width: 100%">
-      <tr>
-        <th>Data</th>
-        <th>Temp max</th>
-        <th>Temp min</th>
-        <th>Viteza vantului</th>
-      </tr>
-      <tr>
-        <td>Data</td>
-        <td>Temp max</td>
-        <td>Temp min</td>
-        <td>Viteza vantului</td>
-      </tr>
-      <tr>
-        <td>Data</td>
-        <td>Temp max</td>
-        <td>Temp min</td>
-        <td>Viteza vantului</td>
-      </tr>
-      <tr>
-        <td>Data</td>
-        <td>Temp max</td>
-        <td>Temp min</td>
-        <td>Viteza vantului</td>
-      </tr>
-      <tr>
-        <td>Data</td>
-        <td>Temp max</td>
-        <td>Temp min</td>
-        <td>Viteza vantului</td>
-      </tr>
-      <tr>
-        <td>Data</td>
-        <td>Temp max</td>
-        <td>Temp min</td>
-        <td>Viteza vantului</td>
-      </tr>
-      <tr>
-        <td>Data</td>
-        <td>Temp max</td>
-        <td>Temp min</td>
-        <td>Viteza vantului</td>
-      </tr>
-      <tr>
-        <td>Data</td>
-        <td>Temp max</td>
-        <td>Temp min</td>
-        <td>Viteza vantului</td>
-      </tr>
-      <tr>
-        <td>Data</td>
-        <td>Temp max</td>
-        <td>Temp min</td>
-        <td>Viteza vantului</td>
-      </tr>
-    </table>
+    <div id="tableContainer"></div>
     <script src="./index.js"></script>
   </body>
 </html>
