--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Cast</title>
+
     <link href="./style.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/jpg" href="./favicon.png" />
   </head>
   <body>
     <h1>Weather Cast</h1>
